--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -21,12 +21,15 @@
   color: #61dafb;
 }
 
-ul > li {
+header > ul > li {
   list-style-type: none;
   cursor: pointer;
 }
-ul > li:hover {
-  color:#0083fd;
+header > ul > li:hover {
+  color: #0083fd;
+}
+.modal-header {
+  display: inline !important;
 }
 
 @keyframes App-logo-spin {
